public record Candidato(String nombre) {}