public enum NivelDeTitulo {
    PRIMER,
    SEGUNDO,
    TERCER,
    CUARTO;
}

